--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <body>
   <h1>About</h1>
   <p>This site iss a sample project for the <strong>awesome</strong>
-     Git tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+     Git tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>
+   </a>.
   </p>
   <img src="images/breaching_whale.jpg">
  </body>
