--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
      Git tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>
    </a>.
   </p>
-  <img src="images/breaching_whale.jpg">
+  <img src="images/polar_bear.jpg" alt="polar bear">
  </body>
  </html>
 
