--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
      Git tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>
    </a>.
   </p>
+  <a href="https://creativecommons.org/licenses/by/2.0/">
   <img src="images/polar_bear.jpg" alt="polar bear">
+  </a>
  </body>
  </html>
 
