--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
   <html>
    <head>
    <title>About Us</title>
-  </head>
+ <meta charset="utf-8">
+ </head>
   <body>
   <h1>About　Us</h1>
   <p>This site iss a sample project for the <strong>awesome</strong>
