--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <html>
    <head>
    <title>A Whale of a greeting</title>
-  </head>
+ <meta charset="uft-8">
+ </head>
   <body>
   <h1>hello, world</h1>
   <a href="about.html">About this project</a>
